fix(accordion): set text-align start directly on accordion container

--- a/packages/accordion/accordion.pcss
+++ b/packages/accordion/accordion.pcss
@@ -1,10 +1,11 @@
 .sds-accordion {
+  text-align: start;
+
   &__title {
     color: var(--sds-color-text-primary);
     font-size: var(--sds-typography-heading-fontsize-small);
     font-weight: var(--sds-typography-weight-regular);
     line-height: var(--sds-typography-heading-lineheight-small);
-    text-align: left;
   }
 
   &__icon {
